--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                             <a class="bold" href="#">Credential URL</a>
                                         </li>
                                     </ul>
-                                    <p class="bold">Description:</p>
+                                    <!-- <p class="bold">Description:</p> -->
                                     <p class="description"> 
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                         Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi
@@ -227,7 +227,6 @@
                                             <a class="bold" href="#">Credential URL</a>
                                         </li>
                                     </ul>
-                                    <p class="bold">Description:</p>
                                     <p class="description">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                         Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi
@@ -255,7 +254,6 @@
                                             <a class="bold" href="#">Credential URL</a>
                                         </li>
                                     </ul>
-                                    <p class="bold">Description:</p>
                                     <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                         Quisque nisl eros, pulvinar </p>
                                 </div>
@@ -276,7 +274,6 @@
                                             <span class="bold">Credential ID: </span>ID Number
                                         </li>
                                     </ul>
-                                    <p class="bold">Description:</p>
                                     <p class="description"> 
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                         Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna. Morbi
