Go to top button

--- a/index.html
+++ b/index.html
@@ -798,6 +798,7 @@
     <div class="static-container">
         <footer>
             <p class="bold">Developed by Georgi Brankovanov - 2024</p>
+            <a href="#bio" class="go-to-top">&uArr;</a>
         </footer>
     </div>
     <!-- FOOTER -->
