Touch screem interface optimizations

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                                 tellus sagittis, viverra est a, bibendum metus. end
                             </p>
                         </div>
+                        <span class="toggle-content"></span>
                     </label>
                 </article>
             </section>
@@ -143,6 +144,7 @@
                                     nunc.
                                     nunc.
                                 </p>
+                                <span class="toggle-content"></span>
                             </label>
                         </div>
                     </details>
@@ -167,6 +169,7 @@
                                     facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus. Donec
                                     scelerisque
                                 </p>
+                                <span class="toggle-content"></span>
                             </div>
                         </label>
                     </details>
@@ -202,6 +205,7 @@
                                     enim
                                     nunc.
                                 </p>
+                                <span class="toggle-content"></span>
                             </div>
                         </label>
                     </details>
@@ -245,6 +249,7 @@
                                         sollicitudin enim eu venenatis. Duis tincidunt laoreet ex, in pretium orci
                                         vestibulum
                                     </p>
+                                    <span class="toggle-content"></span>
                                 </div>
                             </article>
                         </label>
@@ -302,6 +307,7 @@
                                         enim
                                         nunc.
                                     </p>
+                                    <span class="toggle-content"></span>
                                 </div>
                             </article>
                         </label>
@@ -348,6 +354,7 @@
                                         enim
                                         nunc.
                                     </p>
+                                    <span class="toggle-content"></span>
                                 </div>
                             </article>
                         </label>
@@ -368,12 +375,11 @@
                         <input type="radio" name="slides" id="slide-3">
                         <input type="radio" name="slides" id="slide-4">
                         <div class="slide-container">
-                            <div class="slide" draggable>
+                            <div class="slide">
                                 <div>
                                     <input type="checkbox" name="sections" id="cources-image-one">
                                     <label for="cources-image-one">
-                                        <img for="cources-image-one" src="images/certificate_1.png"
-                                            alt="Elephant at sunset" />
+                                        <img for="cources-image-one" src="images/certificate_1.png" alt="Elephant at sunset" />
                                     </label>
                                 </div>
                                 <div>
@@ -419,10 +425,11 @@
                                             Morbi
                                             nec enim nunc.
                                         </p>
+                                        <span class="toggle-content"></span>
                                     </label>
                                 </div>
                             </div>
-                            <div class="slide" draggable>
+                            <div class="slide">
                                 <div>
                                     <input type="checkbox" name="sections" id="cources-image-two">
                                     <label for="cources-image-two">
@@ -463,10 +470,11 @@
                                             a bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis
                                             tincidunt laoreet ex, in pretium orci vestibulum
                                         </p>
+                                        <span class="toggle-content"></span>
                                     </label>
                                 </div>
                             </div>
-                            <div class="slide" draggable>
+                            <div class="slide">
                                 <div>
                                     <input type="checkbox" name="sections" id="cources-image-three">
                                     <label for="cources-image-three">
@@ -493,12 +501,15 @@
                                                 <a class="bold" href="#">Credential URL</a>
                                             </li>
                                         </ul>
-                                        <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Quisque nisl eros, pulvinar </p>
+                                        <p class="description"> 
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            Quisque nisl eros, pulvinar 
+                                        </p>
+                                        <span class="toggle-content"></span>
                                     </label>
                                 </div>
                             </div>
-                            <div class="slide" draggable>
+                            <div class="slide">
                                 <div>
 
                                 </div>
@@ -546,6 +557,7 @@
                                             feugiat faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim
                                             nunc.
                                         </p>
+                                        <span class="toggle-content"></span>
                                     </label>
                                 </div>
                             </div>
@@ -754,7 +766,6 @@
                                 <th scope="row">Grammar</th>
                                 <td>B</td>
                             </tr>
-
                         </tbody>
                     </table>
 
