Tablet and Desktop stylizations

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                                     <span class="bold">Linkedin: </span>
                                     <a href="https://www.linkedin.com/" target="_blank">Linked in profile</a>
                                 </p>
+                                <span class="toggle-content"></span>
                             </div>
                         </div>
                     </label>
