Create side menu for tablet and mobile view

--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
 
     <div class="dynamic-container">
         <!-- ASIDE -->
-        <aside> aside </aside>
+        <aside>
+            <div class="aside-menu">
+                <a class="bold" href="#bio"> About me </a>
+                <a class="bold" href="#work-experience"> Work experience </a>
+                <a class="bold" href="#education"> Education </a>
+                <a class="bold" href="#courses-and-ceriticates"> Cources and certificates </a>
+                <a class="bold" href="#skills"> Skills </a>
+                <a class="bold" href="#languages"> Languages </a>
+                <a class="bold" href="#contacts"> Contacts </a>
+            </div>
+        </aside>
         <!-- ASIDE -->
 
         <main>
@@ -70,6 +80,7 @@
                                     <span class="bold">Linkedin: </span>
                                     <a href="https://www.linkedin.com/" target="_blank">Linked in profile</a>
                                 </p>
+                                <span class="toggle-content"></span>
                             </div>
                         </div>
                     </label>
