--- a/index.html
+++ b/index.html
@@ -167,70 +167,58 @@
             <section id="courses-and-certificates">
                 <article id="courses-and-certificates-wrapper" class="courses-and-ceriticates">
                     <header>
-                        <h2 id="courses-and-certificates-title">Courses and Certificates</h2>
+                        <h2 id="courses-and-certificates-title">Placeholder</h2>
                     </header>
                     <div id="courses-and-certificates-slides-wrapper" class="carousel-container">
-                        <slot>
-                            <input type="radio" name="slides" id="" checked="checked">
-                        </slot>
+                        <input type="radio" name="slides" id="" checked="checked">
                         <div class="slide-container">
                             <div class="slide">
-                                <div>
+                                <!-- IMAGES -->
+                                <div> 
                                     <input type="checkbox" name="sections" id="">
                                     <label for="">
                                         <img for="" src="" alt="" />
                                     </label>
                                 </div>
+                                <!-- IMAGES -->
+                                <!-- DESCRIPTION -->
                                 <div>
                                     <input type="checkbox" name="sections" id="cources-content-one">
                                     <label for="cources-content-one">
                                         <ul>
                                             <li>
-                                                <span class="bold">Cerrificate name: </span>
-                                                Certificate name
+                                                <span class="bold">Placeholder</span>
+                                                <span>Placeholder</span>
                                             </li>
                                             <li>
-                                                <span class="bold">Issuing organization </span>
-                                                Organization name
+                                                <span class="bold">Placeholder</span>
+                                                <span>Placeholder</span>
                                             </li>
                                             <li>
-                                                <span class="bold">Issue date: </span>
-                                                Start date
+                                                <span class="bold">Placeholder</span>
+                                                <span>Placeholder</span>
                                             </li>
                                             <li>
-                                                <span class="bold">Expiration date: </span>
-                                                End date
+                                                <span class="bold">Placeholder</span>
+                                                <span>Placeholder</span>
                                             </li>
                                             <li>
-                                                <span class="bold">Credential ID: </span>
-                                                ID Number
+                                                <span class="bold">Placeholder</span>
+                                                <span>Placeholder</span>
                                             </li>
                                             <li>
-                                                <a class="bold" href="#">Credential URL</a>
+                                                <a class="bold" href="#">Placeholder</a>
                                             </li>
                                         </ul>
-                                        <p class="description">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                            Quisque nisl eros, pulvinar facilisis justo mollis, auctor consequat urna.
-                                            Morbi
-                                            a bibendum metus. Donec scelerisque sollicitudin enim eu venenatis. Duis
-                                            tincidunt laoreet ex, in pretium orci vestibulum eget. Class aptent taciti
-                                            sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis
-                                            pharetra luctus lacus ut vestibulum. Maecenas ipsum lacus, lacinia quis
-                                            posuere
-                                            ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id
-                                            vel
-                                            leo. Integer feugiat faucibus libero, at maximus nisl suscipit posuere.
-                                            Morbi
-                                            nec enim nunc.
-                                        </p>
+                                        <p class="description">Placeholder</p>
                                         <span class="toggle-content"></span>
                                     </label>
                                 </div>
+                                 <!-- DESCRIPTION -->
                             </div>
                         </div>
                         <div class="carousel-indicators">
-                            <label></label> <!-- /slide-1 -->
+                            <label></label>
                         </div>
                     </div>
                 </article>
@@ -239,110 +227,32 @@
 
             <!--PERSONAL PROJECTS-->
             <section id="projects">
-                <article>
+                <article id="projects-wrapper">
                     <header>
-                        <h2>Personal projects</h2>
+                        <h2 id="projects-title">Place holder</h2>
                     </header>
                     <div class="project-list">
                         <article>
                             <header>
-                                <h3>
-                                    Project one
-                                </h3>
+                                <h3>Placeholder</h3>
                             </header>
                             <div>
                                 <ul>
                                     <li>
-                                        <span class="bold">Project link:</span> 
-                                        <a href="#">project link</a>
+                                        <span class="bold">Placeholder:</span> 
+                                        <a href="#">Placeholder</a>
                                     </li>
                                     <li>
-                                        <span class="bold">Repository link:</span>
-                                        <a href="#">project link</a>
+                                        <span class="bold">Placeholder</span>
+                                        <a href="#">Placeholder</a>
                                     </li>
                                 </ul>
                                 <p>
-                                    <span class="bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                    officia deserunt mollit anim id est laborum
+                                    <span class="bold">Placeholder</span> 
+                                    <span>Placeholder</span>
                                 </p>
                                 <div class="tech-stack">
-                                    <span>Tech 1</span>
-                                    <span>Tech 2</span>
-                                    <span>Tech 3</span>
-                                    <span>Tech 4</span>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <header>
-                                <h3>
-                                    Project Two
-                                </h3>
-                            </header>
-                            <div>
-                                <ul>
-                                    <li>
-                                        <span class="bold">Project link:</span> 
-                                        <a href="#">project link</a>
-                                    </li>
-                                    <li>
-                                        <span class="bold">Repository link:</span>
-                                        <a href="#">project link</a>
-                                    </li>
-                                </ul>
-                                <p>
-                                    <span class="bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                                </p>
-                                <div class="tech-stack">
-                                    <span>Tech 1</span>
-                                    <span>Tech 2</span>
-                                    <span>Tech 3</span>
-                                    <span>Tech 4</span>
-                                    <span>Tech 5</span>
-                                    <span>Tech 6</span>
-                                    <span>Tech 7</span>
-                                    <span>Tech 8</span>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <header>
-                                <h3>
-                                    Project Three
-                                </h3>
-                            </header>
-                            <div>
-                                <ul>
-                                    <li>
-                                        <span class="bold">Project link:</span> 
-                                        <a href="#">project link</a>
-                                    </li>
-                                    <li>
-                                        <span class="bold">Repository link:</span>
-                                        <a href="#">project link</a>
-                                    </li>
-                                </ul>
-                                <p>
-                                    <span class="bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                                    Description:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                                </p>
-                                <div class="tech-stack">
-                                    <span>Tech 1</span>
-                                    <span>Tech 2</span>
-                                    <span>Tech 3</span>
-                                    <span>Tech 4</span>
-                                    <span>Tech 5</span>
-                                    <span>Tech 6</span>
+                                    <span>Placeholder</span>
                                 </div>
                             </div>
                         </article>
