Create script to populate skills section

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
                                     <div>
                                         <ul id="education-attributes">
                                             <li>
-                                                <span class="bold">School: </span>School name
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                             <li>
-                                                <span class="bold">Education degree: </span>Bachelor's degree
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                             <li>
-                                                <span class="bold">Degree name: </span>Degree name
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                             <li>
-                                                <span class="bold">Duration: </span>Start date - End date - duration
+                                                <span class="bold">Placeholder </span>Placeholder
                                             </li>
                                         </ul>
                                         <p id="education-description">
@@ -251,9 +251,7 @@
                                     <span class="bold">Placeholder</span> 
                                     <span>Placeholder</span>
                                 </p>
-                                <div class="tech-stack">
-                                    <span>Placeholder</span>
-                                </div>
+                                <div class="tech-stack"></div>
                             </div>
                         </article>
                     </div>
@@ -263,129 +261,30 @@
 
             <!-- SKILLS -->
             <section id="skills">
-                <article class="skills">
+                <article id="skills-wrapper" class="skills">
                     <header>
-                        <h2>Skills</h2>
+                        <h2>Placeholder</h2>
                     </header>
                     <div class="skills-container">
-                        <h3>Technical skills</h3>
+                        <h3>PLaceholder</h3>
                         <div>
                             <input type="checkbox" name="sections" id="skill-one">
                             <label for="skill-one">
-                                <h4>Tech skill 1</h4>
-                                <p class="bold">Tech skill 1</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-two">
-                            <label for="skill-two">
-                                <h4>Tech skill 2</h4>
-                                <p class="bold">Tech skill 2</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-three">
-                            <label for="skill-three">
-                                <h4>Tech skill 3</h4>
-                                <p class="bold">Tech skill 3</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
+                                <h4>PLaceholder</h4>
+                                <p class="bold">PLaceholder</p>
+                                <p>PLaceholder</p>
                             </label>
                         </div>
                     </div>
                     <div class="skills-container">
-                        <h3>Soft skills</h3>
+                        <h3>PLaceholder</h3>
 
                         <div>
                             <input type="checkbox" name="sections" id="skill-four">
                             <label for="skill-four">
-                                <h4>Soft skills 1</h4>
-                                <p class="bold">Soft skills 1</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-five">
-                            <label for="skill-five">
-                                <h4>Soft skills 2</h4>
-                                <p class="bold">Soft skills 2</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-six">
-                            <label for="skill-six">
-                                <h4>Soft skills 3</h4>
-                                <p class="bold">Soft skills 3</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                </p>
-                            </label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="sections" id="skill-seven">
-                            <label for="skill-seven">
-                                <h4>Soft skills 4</h4>
-                                <p class="bold">Soft skills 4</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur.
-                                </p>
+                                <h4>PLaceholder</h4>
+                                <p class="bold">PLaceholder</p>
+                                <p>PLaceholder</p>
                             </label>
                         </div>
                     </div>
